platform/k8s/ssl/health-check.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: liveness-http
spec:
  selector:
    matchLabels:
      app: liveness-http
      version: v1
  template:
    metadata:
      labels:
        app: liveness-http
        version: v1
    spec:
      containers:
      - name: liveness-http
        image: docker.io/istio/health:example
        ports:
        - containerPort: 8001
        readinessProbe:
          httpGet:
            path: /foo
            port: 8001
          initialDelaySeconds: 20
          periodSeconds: 5
