platform/k8s/ssl/se.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-svc-mongocluster
spec:
  hosts:
  - nginx.svc.local # not used
  ports:
  - number: 27019
    name: mongodb
    protocol: HTTPS
