platform/k8s/ssl/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews-route
spec:
  gateways:
  -  istio-system/istio-gateway
  hosts:
  - nginx.dest.svc.cluster.local
  http:
  - name: "nginx"
    match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: nginx.dest.svc.cluster.local
        port: 
          number: 443
